Lesson 5 Category Completed

--- a/Spice/Spice.csproj
+++ b/Spice/Spice.csproj
@@ -21,8 +21,8 @@
 
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Controllers\" />
     <Folder Include="Controllers\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
