--- a/Spice/Spice.csproj
+++ b/Spice/Spice.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="SendGrid" Version="9.13.1" />
     <PackageReference Include="Stripe.net" Version="35.10.0" />
   </ItemGroup>
 
